Resolved several compiler (lint) warnings.