@@ -6,18 +6,21 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import org.junit.jupiter.api.Test;
 
 // NOT_PUBLISHED
-public class Java9Test {
+public class Java9Test
+{
+	@Test
+	public void packageBindingRespected()
+		throws Exception
+	{
+		Object o = Class.forName("with_pack.SimpleClassWithPackage").getDeclaredConstructor().newInstance();
+		assertNotNull(o);
+	}
 
-  @Test
-  public void packageBindingRespected() throws Exception {
-    Object o = Class.forName("with_pack.SimpleClassWithPackage").newInstance();
-    assertNotNull(o);
-  }
-
-  @Test
-  public void classNameBindingRespected() throws Exception {
-    Object o = Class.forName("class_name.SimpleClassWithRightName").newInstance();
-    assertNotNull(o);
-  }
-
+	@Test
+	public void classNameBindingRespected()
+		throws Exception
+	{
+		Object o = Class.forName("class_name.SimpleClassWithRightName").getDeclaredConstructor().newInstance();
+		assertNotNull(o);
+	}
 }
